--- a/service/import/pom.xml
+++ b/service/import/pom.xml
@@ -26,7 +26,7 @@
 
     <properties>
         <target.version>1.7</target.version>
-        <poi.version>3.10-FINAL</poi.version>
+        <poi.version>3.17</poi.version>
         <junit.version>4.12</junit.version>
         <mockito.version>2.18.3</mockito.version>
     </properties>
