--- a/service/import/pom.xml
+++ b/service/import/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.andrea.service.importer</groupId>
+    <groupId>com.github.kossy18.service.importer</groupId>
     <artifactId>service-import</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
